--- a/Lab8/html/index_lab8.html
+++ b/Lab8/html/index_lab8.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,8 +25,8 @@
                     </p>
                     <a href="#" class="btn">Узнать больше...</a>
                 </div>
-                <img class="desktop animate__animated animate__bounceOut header_img" src="../images/header-img.png" alt="pic">
-            </div>
+                <img class="desktop animate__animated  header_img" src="../images/header-img.png" alt="pic">
+            </div>a
         </div>
     </header>
     <main class="main">
@@ -59,21 +59,29 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="order-form">
-    <h2>Форма заказа продукта или услуги</h2>
-    <form action="#" method="post" onsubmit="return validateProductForm()">
-      <label for="product">Выберите продукт или услугу:</label><br>
-      <select id="product" name="product">
-        <option value="product1">Продукт 1</option>
-        <option value="product2">Продукт 2</option>
-      </select><br>
-      <label for="quantity">Количество:</label><br>
-      <input type="number" id="quantity" name="quantity" required><br>
-      <label for="comments">Дополнительные комментарии:</label><br>
-      <textarea id="comments" name="comments" rows="4"></textarea><br>
-      <button type="submit">Отправить заказ</button>
-    </form>
-  </div>
+    <div id="order-form">
+        <div class="left-side">
+            <h2>Форма заказа продукта или услуги</h2>
+            <form action="#" method="post">
+                <label for="product">Выберите продукт или услугу:</label><br>
+                <select id="product" name="product">
+                    <option value="product1">Продукт 1</option>
+                    <option value="product2">Продукт 2</option>
+                </select><br>
+                <label for="quantity">Количество:</label><br>
+                <input type="number" id="quantity" name="quantity" required onchange="checkQuantity()">
+                <span id="quantity"></span><br>
+                <label for="comments">Дополнительные комментарии:</label><br>
+                <textarea id="comments" name="comments" rows="4" onchange="checkComment()"></textarea>
+                <span id="comments"></span> <br>
+                <button type="submit" onclick="validateProductForm(event)">Отправить заказ</button>
+            </form>
+        </div>
+        <div class="right-side" id="summaryBlock" style="display: none;">
+            <h3>Информация заказа:</h3>
+            <p id="summaryContent"></p>
+        </div>
+    </div>
   
   <div id="call-back-form">
     <h2>Форма заказа обратного звонка</h2>
